# REFINE

./: .gitignore  README.md  download-dependencies.sh  install.m  split.m
Full_Size_Vehicle_Simulation/: .gitignore  Dockerfile  README.md  build-docker.sh  run-docker.sh
Full_Size_Vehicle_Simulation/data/: download-dependencies.sh
Full_Size_Vehicle_Simulation/simulator/: JL_startup.m  build-cpp-opt.sh  car_highway_dynamics_gpopsADiGatorGrd.m  car_highway_dynamics_gpopsADiGatorHes.m  car_highway_endpoint_gpopsADiGatorGrd.m  car_highway_endpoint_gpopsADiGatorHes.m  cleanup_frses_l.m  docker-instructions.txt  ford_viz.slxc  frs_exporter_new.m  highway_cruising_10_state_agent.m  highway_cruising_10_state_agent_reduced.m  highway_cruising_11_state_agent.m  highway_cruising_6_state_agent.m  highway_cruising_7_state_agent.m  highway_cruising_9_state_agent.m  highway_simulation.m  run-matlab.sh  split.m  startup.m
Full_Size_Vehicle_Simulation/simulator/Deprecated/: JL_startup_local.m  JL_test_world.m  find_proper_reference_iterative.m  gaussian_parameterized_traj_with_brake.m  parameterized_traj_with_brake.m  saferl_parameterized_traj_with_brake.m  solve_udt_failsafe.m  solve_vdt_given_rt.m  veh_FRS.m  veh_FRS_brake.m  veh_FRS_one_dyn.m  veh_dyn_T_gen.m  veh_dyn_brake.m  veh_dyn_gen.m  veh_dyn_one_hump_gen.m  veh_dyn_turn_error.m  veh_dyn_turn_error_FRS.m  veh_dyn_v_psi_r.m
Full_Size_Vehicle_Simulation/simulator/JL_run_gpops/: JL_GPOPS_highway_HLP.m  JL_dynamic_car_world.m  JL_highway_HLP_old.m  rename_result_GPOPS.m  runGPOPS.m  simGPOPS.m
Full_Size_Vehicle_Simulation/simulator/NewSimulation_JLRunHighwayTesting/: highwayAgentHelper_flzono_ford.m  rename_n_gather_stat.m  run_flzono_ford.m  sim_flzono_ford.m
Full_Size_Vehicle_Simulation/simulator/Sean_sos_rtd/: JL_highway_HLP_SOS.m  JL_modification.txt  longCtrl_noACC.m  runSOS.m  simSOS.m
Full_Size_Vehicle_Simulation/simulator/Viz_Ford_Sim/: ford_viz.slx  ford_viz.slxc  loading_helper.m  loading_helper_mysim.m
Full_Size_Vehicle_Simulation/simulator/cpp-opt/: .clang-format  .gitmodules
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/rover_controller/: CMakeLists.txt  package.xml
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/rover_controller/include/: common.hpp  consts.hpp  cost_fcn.hpp  fl_zono_ipopt_problem.hpp  frs_loader.hpp  gencon.hpp  param_gen.hpp  point_xyh.hpp  ros_gamepad.hpp  rover_control_mode.hpp  simple_util.hpp  trajectory_sym.hpp
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/rover_controller/ipopt/hsl/: CoinHslConfig.h
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/rover_controller/launch/: parameter_generation.launch  parameter_generation_demo.launch
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/rover_controller/src/: cost_fcn.cc  fl_llc.cc  fl_zono_ipopt_problem.cc  frs_loader.cc  gencon.cc  param_gen.cc  parameter_generation.cc  rover_controller.cc  rover_state.cc  test_mex_comp.cc  trajectory_sym.cc
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/state_estimator/: CMakeLists.txt
Full_Size_Vehicle_Simulation/simulator/cpp-opt/src/state_estimator/src/: estimator_closed_loop.py  vkf6.py
Full_Size_Vehicle_Simulation/simulator/eval/: Car_HighwayIPOPTinfo.txt  car_highway_dynamics_gpops.m  car_highway_dynamics_gpopsADiGatorGrd.m  car_highway_dynamics_gpopsADiGatorHes.m  car_highway_endpoint_gpops.m  car_highway_endpoint_gpopsADiGatorGrd.m  car_highway_endpoint_gpopsADiGatorHes.m  plot_from_summary.m  summary_eval.m  test_gpops2.m
Full_Size_Vehicle_Simulation/simulator/gpops_helper/: test_cons.m
Full_Size_Vehicle_Simulation/simulator/offline_useful/: JL_deleteAligned.m  JL_veh_FRS_lane_spd_change.m  (+23 more)
Offline_Reachability_Analysis/: FRS_computation_direction_change.m  FRS_computation_lane_change.m  FRS_computation_speed_change.m  README.md  account_for_footprint.m  examine_FRS.m  find_proper_reference_brute.m  get_ref.m  linear_regime_verification.m  space_subdivision.m  vehicle_dynamics_generation.m  wrap_up_FRS.m
Rover_Robot_Implementation/: README.md
Rover_Robot_Implementation/low-level-controller/: .gitignore
Rover_Robot_Implementation/low-level-controller/src/rover_controller/: CMakeLists.txt
Rover_Robot_Implementation/low-level-controller/src/rover_controller/include/: MyNLP.hpp  bench_helper.h  common.h  complex_heading_state.h  consts.h  fl_llc.h  frs_loader.h  gencon.h  gencon_samples.h  get_waypoint_from_path.h  online_utils.h  point_xy.h  point_xyh.h  poly_predictor.h  rmanu_type.h  ros_gamepad.h  rover_control_mode.h  simple_util.h  trajectory_sym.h  trajectory_values.h  waypoint_interp_params.h
Rover_Robot_Implementation/low-level-controller/src/rover_controller/launch/: parameter_generation.launch
Rover_Robot_Implementation/low-level-controller/src/rover_controller/src/: parameter_generation.cc  rover_controller.cc
Rover_Robot_Implementation/online-parameter-generation/src/jsk_recognition_msgs/: CMakeLists.txt
Rover_Robot_Implementation/online-parameter-generation/src/rover_controller/: CMakeLists.txt  package.xml
Rover_Robot_Implementation/online-parameter-generation/src/rover_controller/docs/: CMakeLists.txt
Rover_Robot_Implementation/online-parameter-generation/src/rover_controller/include/: cost_fcn.hpp  fl_llc.hpp  fl_zono_ipopt_problem.hpp  frs_loader.hpp  gencon.hpp  get_waypoint_from_path.hpp  manu_type.hpp  point_xy.hpp  point_xyh.hpp  poly_predictor.hpp  rover_state.hpp  simple_util.hpp  trajectory_values.hpp  warning_guards.hpp  waypoint_interp_params.hpp
Rover_Robot_Implementation/online-parameter-generation/src/rover_controller/src/: cost_fcn.cc  fl_zono_ipopt_problem.cc  frs_loader.cc  gencon.cc  get_waypoint_from_path.cc  manu_type.cc  param_gen.cc  parameter_generation.cc  poly_predictor.cc  simple_util.cc  waypoint_interp_params.cc
util/: RTD_agent_2D.m  deleteAligned_noslice.m  full_size_const.m  gaussian_T_parameterized_traj_with_brake.m  highway_cruising_10_state_agent.m  highway_cruising_10_state_agent_awd.m  match_trajectories.m  rover_const.m  rover_robot_const.m  sin_one_hump_parameterized_traj_with_brake.m
(+54 files in other folders)
